Fix volume bar position on Firefox

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -627,7 +627,7 @@ input[type=range]::-ms-thumb {
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 2px;
-  margin:20px;
+  margin-top:9px;
   cursor: pointer;
   background: #000;
 }
